--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -13,13 +13,15 @@
 10. Footer / #footer
 -------------------------------------------------------------------*/
 @import url("https://fonts.googleapis.com/css2?family=Muli&family=Poppins:wght@400;600;700&family=Quicksand:wght@500;600;700&display=swap");
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;1,300;1,400;1,500;1,600;1,700;1,800&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Noto+Sans:ital,wght@0,400;0,700;1,400;1,700&family=Open+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;1,300;1,400;1,500;1,600;1,700;1,800&display=swap');
 body, html {
   width: 100%;
   height: 100%;
 }
 
 html {
-  font-family: sans-serif;
+  font-family: "Open Sans", sans-serif;
   line-height: 1.15;
   -webkit-text-size-adjust: 100%;
   -ms-text-size-adjust: 100%;
@@ -28,7 +30,7 @@ html {
 }
 
 body {
-  font-family: "Muli", sans-serif;
+  font-family: "Open Sans", "Muli", sans-serif;
   font-size: 16px;
   line-height: 30px;
   margin: 0;
@@ -41,7 +43,7 @@ body {
 
 p {
   color: #535967;
-  font-family: "Muli", sans-serif;
+  font-family: "Noto Sans", "Open Sans", "Muli", sans-serif;
   line-height: 28px;
   font-size: 16px;
 }
@@ -61,7 +63,7 @@ h3,
 h4,
 h5,
 h6 {
-  font-family: "Quicksand", sans-serif;
+  font-family: "Noto Sans", "Open Sans", "Quicksand", sans-serif;
   font-weight: 700;
   line-height: 1.3;
   margin-bottom: 0px;
@@ -236,7 +238,7 @@ ul, ol {
 Banner Area
 ======================*/
 .section-padding {
-  padding: 70px 0px;
+  padding: 80px 0px;
 }
 
 .page-header {
@@ -285,6 +287,10 @@ Banner Area
   background: #F7F5F4;
 }
 
+.bg-pstblue {
+  background: #EEF8FD;
+}
+
 .mt--105 {
   margin-top: -105px;
 }
@@ -299,6 +305,10 @@ Banner Area
 
 .white-text .subheading, .white-text p, .white-text span {
   color: #fff;
+}
+
+.center-head {
+  text-align: Center;
 }
 
 .center-heading {
@@ -350,7 +360,7 @@ Banner Area
   padding: 120px 0px;
   background: #F4FDFF;
   position: relative;
-  font-color: #fff;
+  font-color: #000;
   background: url("../images/bg/page-header.jpg") no-repeat;
   background-size: cover;
   background-position: 0px 10%;
@@ -364,25 +374,25 @@ Banner Area
   top: 0px;
   width: 100%;
   height: 100%;
-  background: #263b5e;
-  opacity: .85;
+  background: #eef8fd;
+  /*opacity: .54;*/
 }
 
 .page-middle-banner .page-middle-banner-content h1 {
-  color: #fff;
+  color: #000;
   font-size: 60px;
   text-transform: capitalize;
 }
 
 .page-middle-banner .page-middle-banner-content ul li {
-  color: #fff;
+  color: #000;
   text-transform: uppercase;
   font-weight: 600;
 }
 
 .page-middle-banner .page-middle-banner-content ul li a {
-  color: #fff;
-  opacity: .7;
+  color: #000;
+  /*opacity: .7;*/
 }
 
 /*=======================
@@ -646,15 +656,23 @@ Header TopBar
   padding: 12px 0px;
   z-index: 999;
   margin-bottom: -100px;
+  margin-bottom: -95px;
   position: relative;
+  /*visibility: hidden;*/      /*메뉴 숨기기 */
 }
 
+/* 메뉴바 글자색 */
 .nav-tp .navbar-nav .nav-link {
   color: #fff;
 }
 
 .nav-tp .navbar-brand h3 {
   color: #fff;
+}
+
+/* 스크롤 내렸을 때 메뉴바 글자색 */
+.menu_fixed .navbar-nav .nav-link {
+  color: #000;
 }
 
 
@@ -2086,20 +2104,27 @@ OfFer COurse
 Footer Section
 ======================*/
 .footer {
-  background: #100f1f;
-  padding: 50px 0px 0px;
+  background: #C0D0DB;
+  padding: 30px 0px 0px;
   position: relative;
-  color: rgba(255, 255, 255, 0.8);
+  /*color: rgba(255, 255, 255, 0.8);*/
+  color: #3E3E3E;
 }
 
 .footer .footer-widget .widget-title {
-  color: #fff;
+  
+  color: #3E3E3E;
   margin-bottom: 20px;
   font-size: 22px;
+  font-weight: bold;
 }
 
 .footer .footer-widget p {
   color: rgba(255, 255, 255, 0.8);
+}
+
+.footer .footer-widget img {
+  margin-top: -5px;
 }
 
 .footer .footer-contact ul {
@@ -2111,8 +2136,9 @@ Footer Section
 }
 
 .footer .footer-contact ul li i {
-  color: #FF1949;
-  margin-right: 20px;
+  color: #3E3E3E;
+  margin-right: 10px;
+  margin-left: 10px;
   float: left;
   margin-top: 7px;
   min-width: 30px;
@@ -2169,7 +2195,8 @@ Footer Section
 }
 
 .footer-btm .copyright p {
-  color: rgba(255, 255, 255, 0.8);
+  /*color: rgba(255, 255, 255, 0.8);*/
+  color: black;
   margin-bottom: 0px;
 }
 
@@ -2605,6 +2632,7 @@ Course Topics
   content: "\f068";
   font-family: "Font Awesome 5 Free";
   color: #FF1949;
+  /*color: #7799B1;    FAQ click '-' color */
 }
 
 .course-topic .card .card-header button.curriculmn-title-btn[aria-expanded="true"] {
@@ -3736,7 +3764,7 @@ input[type=submit] {
   border-radius: 4px;
   outline: 0;
   background: 0 0;
-  background-color: #43454b;
+  background-color: #fff;
   text-shadow: none;
 }
 
@@ -3746,8 +3774,8 @@ button:hover,
 input[type=button]:hover,
 input[type=reset]:hover,
 input[type=submit]:hover {
-  border-color: #000;
-  background: #000;
+  border-color: #fff;
+  background: #fff;
 }
 
 table.cart td.actions .coupon {
