--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -291,6 +291,10 @@ Banner Area
   background: #EEF8FD;
 }
 
+.bg-darkblue {
+  background: #92ADC1;
+}
+
 .mt--105 {
   margin-top: -105px;
 }
@@ -465,6 +469,14 @@ Header TopBar
   padding: 0px;
 }
 
+.middle-navbar-nav {
+    display: flex;
+    flex-direction: row;
+    padding-left: 0;
+    margin-bottom: 0;
+    list-style: none;
+}
+
 .navbar-nav .nav-link {
   padding-left: 20px !important;
   padding-right: 20px !important;
@@ -476,6 +488,17 @@ Header TopBar
   color: #111;
 }
 
+.middle-navbar-nav .nav-link {
+  padding-left: 20px !important;
+  padding-right: 20px !important;
+  padding-top: 20px;
+  padding-bottom: 20px;
+  font-weight: 600;
+  text-transform: capitalize;
+  font-size: 15px;
+  color: #fff;
+}
+
 .navbar .navbar-brand {
   width: 230px;
 }
@@ -484,7 +507,15 @@ Header TopBar
   color: #FF1949;
 }
 
+.middle-navbar-nav .nav-link:hover {
+  color: #111;
+}
+
 .navbar-nav .nav-link i {
+  margin-left: 5px;
+}
+
+.middle-navbar-nav .nav-link i {
   margin-left: 5px;
 }
 
@@ -1255,6 +1286,37 @@ Course Block
   margin-left: 10px;
 }
 
+.bottom-padding {
+  padding-bottom: 60px;
+}
+
+.h3-a-red-course:hover {
+  color: red;
+}
+
+.h3-a-orange-course:hover {
+  color: orange;
+}
+
+.h3-a-yellow-course:hover {
+  color: #ffd400;   /*dark yellow*/
+}
+
+.h3-a-green-course:hover {
+  color: green;
+}
+
+.h3-a-blue-course:hover {
+  color: blue;
+}
+
+.h3-a-indigo-course:hover {
+  color: indigo;
+}
+
+.h3-a-purple-course:hover {
+  color: purple;
+}
 /*=======================
 Course Category
 ========================*/
